--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prettier": "1.19.1"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "html-literal": "^1.1.0",
     "navigo": "^8.11.1",
     "node": "^15.8.0",
